# audio-content-id-enterprise

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/api/audio_content_api/: __init__.py  main.py
apps/api/audio_content_api/static/: app.js  index.html  styles.css
apps/workers/audio_content_workers/: __init__.py  main.py
docs/: architecture.md  github-setup.md
infra/: docker-compose.yml
scripts/: run-tests.ps1
tests/: _path.py  helpers.py  test_alignment.py  test_api_ui.py  test_fingerprint.py  test_pipeline.py  test_scoring.py
